# uni-fiscal-free-lunch

./: .gitignore  README.md  flake.nix
code/: README.md
code/R/: plot-figures.R
code/dynare/: figure-1a.mod  figure-1b.mod  figure-3-plotting.mod  figure-3.mod  model.mod  multiplier-in-levels.mod
code/dynare/experiments/: figure-2.mod
code/dynare/model/: base.mod
code/python/: README.md  pyproject.toml
code/python/src/fiscal_free_lunch/: __init__.py  cli.py  compare.py  experiments.py  model.py  params.py
code/python/tests/: test_compare.py
docs/: equations-in-latex.txt  structure-final-paper.txt
paper/: main.tex  preamble.tex
paper/backmatter/: parameter-values.tex  references.tex
paper/bibliography/: references.bib
paper/chapters/: conclusion.tex  fiscal-policy-and-spending-multiplier.tex  impulse-response-functions.tex  introduction.tex  model.tex  multiplier-and-fiscal-free-lunch.tex  workflow.tex
paper/figures/: figure-1a.eps  figure-1b-scatter.eps  figure-1b-scatter.fig  figure-1b.eps  figure-2-5-quarter-new-taylor-rule.eps  figure-2-5-quarter-new-taylor-rule.fig  figure-2-5-quarter.eps  figure-2-no-ir.eps  figure-3-government-debt-alternative-prices.eps  figure-3-government-debt-alternative-prices.fig  figure-3-government-debt-no-inflation.eps  figure-3-government-debt-no-inflation.fig  figure-3-gsm-alternative-price.eps  figure-3-gsm-alternative-price.fig  figure-3-gsm-no-inflation.eps  figure-3-gsm-no-inflation.fig
paper/frontmatter/: titlepage.tex
scripts/: build-all.sh  build-figure-comparison.sh  run-dynare-docker.sh
(+16 files in other folders)
