[project]
name = "fiscal-free-lunch"
version = "0.1.0"
description = "Python port of the fiscal free lunch Dynare simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]

[project.scripts]
fiscal-free-lunch = "fiscal_free_lunch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
